--- a/emails/interview-schedule/html.ejs
+++ b/emails/interview-schedule/html.ejs
@@ -1,1 +1,5 @@
-<%- event.description %>
+<b>Opening: </b><%= candidate._opening.title %><br/>
+<b>Location: </b><%= event.location || "N.A."  %><br/>
+<b>Candidate CV Link: </b><%= candidate.cvLink || "N.A." %><br/>
+<b>Description:</b><br/>
+<%- event.description || "N.A." %>
