fix(event): Removed .utc from moment

--- a/emails/interview-schedule/html.ejs
+++ b/emails/interview-schedule/html.ejs
@@ -1,5 +1,6 @@
 <b>Opening: </b><%= candidate._opening.title %><br/>
-<b>Location: </b><%= event.location || "N.A."  %><br/>
+<b>When: </b><%= when %><br/>
+<b>Where: </b><%= event.location || "N.A."  %><br/>
 <b>Candidate CV Link: </b><%= candidate.cvLink || "N.A." %><br/>
 <b>Description:</b><br/>
 <%- event.description || "N.A." %>
